Project

General

Profile

Actions

Bug #53370

closed

pubsub:list user's topic, ERROR: could not get topics: (2) No such file or directory

Added by zhipeng li over 2 years ago. Updated over 1 year ago.

Status:
Resolved
Priority:
Normal
Target version:
-
% Done:

0%

Source:
Tags:
pubsub
Backport:
Regression:
No
Severity:
3 - minor
Reviewed:
Affected Versions:
ceph-qa-suite:
Pull request ID:
Crash signature (v1):
Crash signature (v2):

Description

[root@node106 ~]# radosgw-admin topic list --uid=test
ERROR: could not get topics: (2) No such file or directory

Actions #1

Updated by zhipeng li over 2 years ago

[root@node106 ceph]# ceph -v
ceph version 17.0.0-9019-g02348afc (02348afc735344c38ea2a3e6c1a291881b273696) quincy (dev)

Actions #2

Updated by zhipeng li over 2 years ago

is radosgw-admin APIS deprecated ?

Actions #3

Updated by zhipeng li over 2 years ago

[root@node106 ~]# ceph -v
ceph version 16.2.6 (ee28fb57e47e9f88813e24bbf4c14496ca299d31) pacific (stable)
has same issue

Actions #4

Updated by Casey Bodley over 2 years ago

  • Assignee set to Yuval Lifshitz
  • Tags set to pubsub
Actions #6

Updated by Casey Bodley over 1 year ago

  • Status changed from New to Resolved
Actions

Also available in: Atom PDF