rgw: fix result when user's topics is null

Fixes: https://tracker.ceph.com/issues/53370
Signed-off-by: caolei <cao.leilc@inspur.com>